Z-index moving slideshow image bug resolved

--- a/src/assets/css/sass_assets/home_page/_showcase.scss
+++ b/src/assets/css/sass_assets/home_page/_showcase.scss
@@ -30,7 +30,13 @@
 			transition: transform 2s ease-in-out;
 		}
 
-		.outer { z-index: -2 }
+		.outer-left { z-index: -1 }
+		/** 
+			z-index: -2 => Because we have the items in the slideshow array are displayed on top of each other
+			So the solution is: ones from the right are on top of the ones from the left, so when the image move to the left,
+			the left one should be on the top of the right one.
+		**/
+		.outer-right { z-index: -2 }
 	}
 
 	.slideshow-buttons {
